--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,32 @@
 [package]
-name = "nostringer-rs"
+name = "nostringer"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 nostr = { git = "https://github.com/rust-nostr/nostr", rev = "31180d7" }
-secp256k1 = { version = "0.29", default-features = false, features = [
-    "rand",
-    "serde",
-] }
-
-hashes = { package = "bitcoin_hashes", version = "0.12" }
-rand_core = "0.6"
+k256 = { version = "0.13", features = ["arithmetic", "sha256"] }
 sha2 = "0.10"
-thiserror = "1.0"
+hex = "0.4"
+rand = "0.8"
+thiserror = "2.0.12"
+subtle = "2.5"
+generic-array = "0.14"
+typenum = "1.17"
+lazy_static = "1.5.0"
+#rand_core = "0.6"
+
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
+
 
 [dev-dependencies]
 criterion = "0.5"
 
-[[bench]]
-name = "ring_signatures"
-harness = false
+[features]
+default = []
+serde = ["dep:serde", "dep:serde_json"]
 
 [[bench]]
-name = "ecdsa"
+name = "ring_signatures"
 harness = false
