--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,18 @@
 name = "nostringer"
 version = "0.1.0"
 edition = "2024"
+description = "A blazing fast Rust implementation of unlinkable ring signatures for Nostr, allowing anonymous group signatures with secp256k1 keys"
+authors = ["AbdelStark <abdel@starknetonbitcoin.com>"]
+license = "MIT"
+repository = "https://github.com/AbdelStark/nostringer-rs"
+homepage = "https://github.com/AbdelStark/nostringer-rs"
+documentation = "https://docs.rs/nostringer"
+keywords = ["nostr", "cryptography", "ring-signature", "privacy", "anonymity"]
+categories = ["cryptography", "network-programming"]
+readme = "README.md"
+
+[badges]
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 nostr = { version = "0.40.0" }
@@ -26,6 +38,10 @@ criterion = "0.5"
 [features]
 default = []
 serde = ["dep:serde", "dep:serde_json"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [[bench]]
 name = "ring_signatures"
