📝 update cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "nostringer"
 version = "0.1.0"
 edition = "2024"
 description = "A blazing fast Rust implementation of unlinkable ring signatures for Nostr, allowing anonymous group signatures with secp256k1 keys"
-authors = ["AbdelStark <abdel@starknetonbitcoin.com>"]
+authors = ["AbdelStark <@AbdelStark>"]
 license = "MIT"
 repository = "https://github.com/AbdelStark/nostringer-rs"
 homepage = "https://github.com/AbdelStark/nostringer-rs"
