--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ hex = "0.4"
 rand = "0.8"
 thiserror = "2.0.12"
 subtle = "2.5"
-generic-array = "0.14"
 typenum = "1.17"
 lazy_static = "1.5.0"
 #rand_core = "0.6"
@@ -33,7 +32,7 @@ serde_json = { version = "1.0", optional = true }
 
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [features]
 default = []
