--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,38 +1,55 @@
-name: Benchmark PR
+name: Benchmarks
 
 on:
+  push:
+    branches: [main]
   pull_request:
-    types: [opened, synchronize]
-    paths:
-      - "src/**"
-      - "benches/**"
-      - "Cargo.toml"
-      - "Cargo.lock"
+    branches: [main]
+  # Allow manual triggering
+  workflow_dispatch:
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   benchmark:
-    name: Run benchmarks on PR
+    name: Run benchmarks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: Swatinem/rust-cache@v2
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+
+      - name: Install gnuplot
+        run: |
+          sudo apt update
+          sudo apt install -y gnuplot
+          gnuplot --version
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
 
       - name: Run benchmarks
-        run: cargo bench --bench ring_signatures --bench ecdsa -- --verbose > benchmark_results.txt
+        run: cargo bench
 
-      - name: Process benchmark results
-        id: process_results
+      - name: Create benchmark archive
         run: |
-          echo 'BENCHMARK_COMMENT<<EOF' >> $GITHUB_ENV
-          echo '### Benchmark Results' >> $GITHUB_ENV
-          echo '```' >> $GITHUB_ENV
-          cat benchmark_results.txt >> $GITHUB_ENV
-          echo '```' >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
+          cd target/criterion
+          tar -czf ../../benchmark-report.tar.gz .
 
-      - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v2
+      - name: Upload benchmark report
+        uses: actions/upload-artifact@v4
         with:
-          message: ${{ env.BENCHMARK_COMMENT }}
-          comment_tag: benchmark_results
+          name: benchmark-report
+          path: benchmark-report.tar.gz
+          retention-days: 30
+
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-html-report
+          path: target/criterion/report/
+          retention-days: 30
