--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,47 +1,37 @@
-[package]
-name = "nostringer"
-version = "0.1.1"
-edition = "2024"
-description = "A blazing fast Rust implementation of unlinkable ring signatures for Nostr, allowing anonymous group signatures with secp256k1 keys"
-authors = ["AbdelStark <@AbdelStark>"]
-license = "MIT"
+[workspace]
+members = ["crates/nostringer", "crates/nostringer_cli"]
+resolver = "2"
+
+[workspace.package]
+version = "0.1.0"
+authors = ["Abdel <abdelhamid.bakhta@gmail.com>"]
+description = "A Rust implementation of the ring signature scheme in the nostringer TypeScript library"
 repository = "https://github.com/AbdelStark/nostringer-rs"
 homepage = "https://github.com/AbdelStark/nostringer-rs"
-documentation = "https://docs.rs/nostringer"
-keywords = ["nostr", "cryptography", "ring-signature", "privacy", "anonymity"]
-categories = ["cryptography", "network-programming"]
-readme = "README.md"
+edition = "2021"
+license = "MIT"
+keywords = ["cryptography", "ring-signature", "nostr", "privacy"]
+categories = ["cryptography", "authentication"]
 
-[badges]
-maintenance = { status = "actively-developed" }
+[workspace.dependencies]
+# Core crate dependencies
+hex = "0.4.3"
+k256 = { version = "0.13.1", features = ["ecdsa"] }
+rand = "0.8.5"
+sha2 = "0.10.7"
+subtle = "2.5.0"
+thiserror = "1.0.49"
+serde = { version = "1.0.188", features = ["derive"] }
 
-[dependencies]
-nostr = { version = "0.40.0" }
-k256 = { version = "0.13", features = ["arithmetic", "sha256"] }
-sha2 = "0.10"
-hex = "0.4"
-rand = "0.8"
-thiserror = "2.0.12"
-subtle = "2.5"
-typenum = "1.17"
-lazy_static = "1.5.0"
-#rand_core = "0.6"
+# CLI crate dependencies
+clap = { version = "4.4.3", features = ["derive"] }
+anyhow = "1.0.75"
+colored = "2.0.4"
 
-serde = { version = "1.0", features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
-
-
-[dev-dependencies]
+# Development dependencies
 criterion = { version = "0.5.1", features = ["html_reports"] }
 
-[features]
-default = []
-serde = ["dep:serde", "dep:serde_json"]
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
-
-[[bench]]
-name = "ring_signatures"
-harness = false
+[workspace.metadata]
+# Controls what crates get published
+# `true` means all crates will be published
+publish.publish-all = true
