--- a/crates/nostringer_cli/Cargo.toml
+++ b/crates/nostringer_cli/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-nostringer = { version = "0.1.5" }
+nostringer = { version = "0.1.6", features = ["wasm"] }
 clap = { workspace = true }
 anyhow = { workspace = true }
 colored = { workspace = true }
