--- a/crates/nostringer/Cargo.toml
+++ b/crates/nostringer/Cargo.toml
@@ -31,6 +31,7 @@ serde_bytes = "0.11.17"
 criterion = { version = "0.4", features = ["html_reports"] }
 colored = "2.0"
 wasm-bindgen-test = "0.3"
+nostr = "0.40.0"
 
 [features]
 default = []
