--- a/crates/nostringer/Cargo.toml
+++ b/crates/nostringer/Cargo.toml
@@ -26,12 +26,13 @@ getrandom = { version = "0.2", features = ["js"], optional = true }
 js-sys = { version = "0.3", optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 serde_bytes = "0.11.17"
+nostr = "0.40.0"
+serde_json = "1.0.140"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
 colored = "2.0"
 wasm-bindgen-test = "0.3"
-nostr = "0.40.0"
 
 [features]
 default = []
